@@ -38,6 +38,7 @@ import android.media.Image;
 import android.media.Image.Plane;
 import android.media.ImageReader;
 import android.media.ImageReader.OnImageAvailableListener;
+import android.os.Build;
 import android.os.Bundle;
 import android.os.Environment;
 import android.os.Handler;
@@ -63,6 +64,7 @@ import android.widget.Spinner;
 import android.widget.TextView;
 import android.widget.Toast;
 import androidx.annotation.NonNull;
+import androidx.annotation.RequiresApi;
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.appcompat.widget.SwitchCompat;
 import androidx.appcompat.widget.Toolbar;
@@ -1131,8 +1133,8 @@ public abstract class CameraActivity extends AppCompatActivity
     if (loggingEnabled) logSpinner.setAlpha(0.5f);
     else logSpinner.setAlpha(1.0f);
     logSwitchCompat.setChecked(loggingEnabled);
-    if (loggingEnabled) logSwitchCompat.setText("Logging");
-    else logSwitchCompat.setText("Not Logging");
+    if (loggingEnabled) logSwitchCompat.setText(R.string.logging);
+    else logSwitchCompat.setText(R.string.not_logging);
   }
 
   protected abstract void processImage();
@@ -1190,7 +1192,7 @@ public abstract class CameraActivity extends AppCompatActivity
       connectionSwitchCompat.setText(usbConnection.getProductName());
       Toast.makeText(getContext(), "Connected.", Toast.LENGTH_SHORT).show();
     } else {
-      connectionSwitchCompat.setText("No Device");
+      connectionSwitchCompat.setText(R.string.no_device);
       // Tried to connect but failed
       if (isChecked) {
         Toast.makeText(getContext(), "Please check the USB connection.", Toast.LENGTH_SHORT).show();
@@ -1319,7 +1321,7 @@ public abstract class CameraActivity extends AppCompatActivity
                 case "DRIVE_CMD":
                   JSONObject driveValue = commandJsn.getJSONObject("driveCmd");
                   controllerHandler.handleDriveCommand(
-                      new Float(driveValue.getString("l")), new Float(driveValue.getString("r")));
+                      Float.valueOf(driveValue.getString("l")), Float.valueOf(driveValue.getString("r")));
                   break;
 
                 case "LOGS":
